# Monetio-CL

./: .gitignore  README.md  monetio-cl.py  monetio_cl.py  pyproject.toml  setup.py  sinca2netcdf.py  test.py  test2.py
data_download/: dmc_downloader.py  downloader.py
src/MonetioCL/: cli.py
src/MonetioCL/config/: config.json
src/MonetioCL/data_download/: dmc_downloader.py  downloader.py
src/MonetioCL/translate/: dmc_translator.py  translator.py
src/MonetioCL/utils/: config.py  utils.py
translate/: dmc_translator.py  dmctranslator.py  sinca_translator.py  sincatranslator.py  translator.py
utils/: config.py  utils.py  webclient.py
